# S.L.A.T.E

./: .gitignore  .gitmodules  .slate_copilot_bridge.json  .slate_copilot_bridge_results.json  .slate_orchestrator_state.json  .slate_runner_costs.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  WORKFLOW_FIX_GUIDE.md  fix-runner-ai-access.bat  fix-runner-ai-access.ps1  fix_workflow_ai_access.py  install_slate.py  pyproject.toml  requirements.txt  slate.spec
.claude-plugin/: marketplace.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml  projects.json  slate.config.yaml  slate.slate
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  task.md
.github/agents/: slate.agent.md
.github/prompts/: slate-benchmark.prompt.md  slate-ci.prompt.md  slate-hardware.prompt.md  slate-orchestrator.prompt.md  slate-runner.prompt.md  slate-status.prompt.md
.github/workflows/: agentic.yml  ai-maintenance.yml  ai-training.yml  cd.yml  ci.yml  docker.yml  fork-intelligence.yml  fork-validation.yml  git-intelligence.yml  github-models.yml  gpu-tests.yml  pr.yml  (+11 more)
.slate_tech_tree/: tech_tree.json
agents/: github_models_api.py  runner_api.py  slate_dashboard_server.py
aurora_core/: slate_ai_toolkit_integration.py  slate_fork_manager.py  slate_hardware_optimizer.py  slate_package_manager.py  slate_project_manager.py  slate_protocols.py  slate_runner_manager.py  slate_runtime.py  slate_sdk.py  slate_status.py  slate_terminal_monitor.py  slate_utils.py
slate/: action_guard.py  copilot_sdk_session.py  copilot_sdk_tools.py  copilot_slate_runner.py  feature_flags.py  integrated_autonomous_loop.py  mcp_server.py  ml_orchestrator.py  runner_cost_tracker.py  runner_fallback.py  sdk_source_guard.py  setup_runner.ps1  slate_ai_orchestrator.py  slate_copilot_sdk_bridge.py  slate_fork_intelligence.py  slate_fork_manager.py  slate_github_integration.py  slate_github_models.py  slate_installer.py  slate_mcp_server.py  slate_orchestrator.py  slate_project_board.py  slate_release_runner.py  slate_runner_manager.py  slate_runtime.py  slate_sdk.py  slate_service_watchdog.py  slate_status.py  slate_unified_autonomous.py  slate_workflow_manager.py  slate_workflow_push.py
slate_core/: __init__.py  file_lock.py  gpu_scheduler.py  memory.py
slate_web/: dashboard_template.py
tests/: test_aurora_core.py  test_gpu_compute.py  test_schematic_api.py
(+26 files in other folders)
