# Modified: 2026-02-07T04:57:00Z | Author: COPILOT | Change: Update license metadata
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slate"
version = "2.4.0"
description = "System Learning Agent for Task Execution"
readme = "README.md"
license = {text = "EOSL-1.0"}
requires-python = ">=3.11"
authors = [
    {name = "SynchronizedLivingArchitecture"}
]
keywords = ["ai", "agent", "orchestration", "pytorch", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "psutil>=5.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "httpx>=0.26.0",
    "chromadb>=0.4.22",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "peft>=0.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
observability = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.scripts]
slate-status = "slate.slate_status:main"
slate-runtime = "slate.slate_runtime:main"
slate-benchmark = "slate.slate_benchmark:main"
slate-hardware = "slate.slate_hardware_optimizer:main"

[project.urls]
Homepage = "https://github.com/SynchronizedLivingArchitecture/S.L.A.T.E"
Repository = "https://github.com/SynchronizedLivingArchitecture/S.L.A.T.E"
Issues = "https://github.com/SynchronizedLivingArchitecture/S.L.A.T.E/issues"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "actions-runner*",
    "_temp",
    ".venv",
    "__pycache__",
    ".git",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
